# satudua

./: .gitignore  Makefile  README.md  go.mod  hello.go
cmd/satudua/: main.go
hello/: CMakeLists.txt
hello/include/: Hello.h
hello/src/: Hello.c
